# prodigy-evaluate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  tests.yml  unit_tests.yml
prodigy_evaluate/: __init__.py  utils.py
tests/: test_evaluate.py
