[metadata]
version = 0.1.0
description = Recipes for evaluating spaCy pipelines
url = https://github.com/explosion/prodigy-evaluate
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    scikit-learn==1.4.0
    matplotlib==3.8.3
    nervaluate==0.1.8

[options.entry_points]
prodigy_recipes =
    evaluate.evaluate = prodigy_evaluate:evaluate
    evaluate.evaluate-example = prodigy_evaluate:evaluate_example
    evaluate.nervaluate = prodigy_evaluate:evaluate_nervaluate

[bdist_wheel]
universal = true

[sdist]
formats = gztar