[metadata]
version = 0.1.0
description = Recipes for evaluating spaCy pipelines
url = https://github.com/explosion/prodigy-evaluate
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    #prodigy>=1.15.2,<2.0.0
    scikit-learn>=1.4.0,<1.5.0
    matplotlib>=3.8.0,<3.9.0

[options.entry_points]
prodigy_recipes =
    evaluate = prodigy_evaluate:evaluate
    evaluate-example = prodigy_evaluate:evaluate_example

[bdist_wheel]
universal = true

[sdist]
formats = gztar